<resources>
    <string name="app_name">Kim Kazandı?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="all_draws">Tüm Çekilişler</string>
    <string name="beginners">Yeni Başlayanlar</string>
    <string name="free_join">Bedava Katılım</string>
    <string name="get_a_car">Araba Kazan</string>
    <string name="get_a_phone_tablet">Telefon Tablet Kazan</string>
    <string name="get_a_holiday">Tatil Kazan</string>
    <string name="follows">Takip Ettiklerim</string>
    <string name="raffle_card_detail_label_text">Detay</string>
    <string name="follow_text">Takip Et</string>
    <string name="unfollow_text">Takipten çık</string>
    <string name="something_went_wrong_text">Bir hata oluştu</string>

    <string name="start_date_text">Başlangıç Tarihi</string>
    <string name="last_join_date_text">Son Katılım Tarihi</string>
    <string name="raffle_date_text">Çekiliş Tarihi</string>
    <string name="advert_date_text">İlan Tarihi</string>
    <string name="min_spend_text">Min. Harcama Tutarı</string>
    <string name="total_gift_amount_text">Top. Hediye Değeri</string>
    <string name="total_gift_count_text">Top. Hediye Sayısı</string>
    <string name="important_informations_text">Önemli Bilgiler</string>
    <string name="nothing_to_show_yet_text">Henüz Hiçbir Çekilişi Takip Etmiyorsunuz</string>
    <string name="groups_text">Kategoriler</string>


</resources>