<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.raffleCardDetail.RaffleCardDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pbRaffleDetail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtRaffleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_extra_bold"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgRaffleImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:clipToOutline="true"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRaffleTitle"
            app:shapeAppearanceOverlay="@style/roundedImageView" />

        <TextView
            android:id="@+id/txtRaffleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/inter_regular"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgRaffleImageView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tablesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnFollow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRaffleDescription">

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:stretchColumns="*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ECEFF1">

                    <TextView
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/important_informations_text" />

                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:stretchColumns="*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ECEFF1">

                    <TextView
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/start_date_text" />

                    <TextView
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/min_spend_text" />

                    <TextView
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/raffle_date_text" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtStartDate"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:padding="8dp" />

                    <TextView
                        android:id="@+id/txtMinSpend"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:padding="8dp" />

                    <TextView
                        android:id="@+id/txtRaffleDate"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:padding="8dp" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/tableLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:stretchColumns="*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ECEFF1">

                    <TextView
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/advert_date_text" />

                    <TextView
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/total_gift_amount_text" />

                    <TextView
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/total_gift_count_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtAdvertDate"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:padding="8dp" />

                    <TextView
                        android:id="@+id/txtTotalGiftAmount"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:padding="8dp" />

                    <TextView
                        android:id="@+id/txtTotalGiftCount"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:padding="8dp" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/tableLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:stretchColumns="*"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout3">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ECEFF1">

                    <TextView
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/last_join_date_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtLastJoinDate"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:padding="8dp" />
                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnFollow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/follow_text"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


